Fixed icon overflow

--- a/newOSUACMWebsite/header.css
+++ b/newOSUACMWebsite/header.css
@@ -10,6 +10,7 @@
     left: 0px;
     top: 0px;
     width: 100%;
+    min-width: 625px;
     box-sizing: border-box;
 
     padding: 5px 0px 5px 0px;
